modified imageplaceholder in box1 to try and adjust to customer specifications. More modification needed. Adjusted box2 items to remove unnecessary lines and fixed gapping to customer spec.

--- a/style.css
+++ b/style.css
@@ -50,8 +50,14 @@ font-size: 12px;
     color: #E5E7EB;
     font-size: 18px;
     align-items: center;
-    justify-content: space-around;
-    
+}
+
+.box1-content {
+    display: flex;
+    align-items: center;
+    margin-left: 10%;
+    margin-right: 10%;
+   
 }
 
 .box1 .box1-bold {
@@ -76,6 +82,9 @@ font-size: 12px;
     background: grey;
     color: #E5E7EB;
     align-items: center;
+    padding: 120px;
+    margin: 20px;
+    width: 300px;
 }
 
 .box2 {
@@ -86,6 +95,13 @@ font-size: 12px;
     justify-content: center;
     padding-top: 30px;
     padding-bottom: 90px; 
+}
+
+.box2-header {
+    font-size: 36px;
+    color:#1F2937;
+    font-weight: bolder;
+
 }
 
 .placeholder2 {
@@ -101,16 +117,14 @@ font-size: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 160px;
 }
 
 .img-row {
     display: flex;
     text-align: center;
-    justify-content: center;
+    
     margin-top: 20px;
-    gap: 20px;  
 }
 
 .box3 {
@@ -189,4 +203,3 @@ font-size: 12px;
     height: 60px;
     }
     
-
